--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,7 @@
 @layer base {
   body {
     /* body M */
-    /* font-size: 1.375rem; */
-    @apply font-body text-grey font-light /*leading-8*/;
+    @apply font-body text-grey font-light text-lg lg:text-[1.375rem] lg:leading-8;
   }
 
   h1,
@@ -22,19 +21,7 @@
   }
 
   h2 {
-    /* heading L */
-    /* font-size: 4.375rem;
-    @apply leading-70; */
-  }
-
-  h3 {
-    /* heading M */
-    /* @apply text-6xl leading-50; */
-  }
-
-  h4 {
-    /* heading S */
-    /* @apply text-4xl leading-9; */
+    @apply text-[3.125rem] leading-[2.8125rem] lg:text-6xl lg:leading-[3.75rem];
   }
 
   small {
